client/src/SASS/ProjectForm.scss
@import './mixins';
@import './palette';

.project-form-wrapper {
  color: $white;
  width: 98%;
  margin-top: 14vh;
  display: flex;

  .modal--close {
    display: none;
  }

  .modal--expand {
    animation: fadeIn 0.2s ease-in-out;

    span.modal--expand__background-overlay {
      background: $modal-bg;
      cursor: pointer;
      content: '';
      position: fixed;
      height: 100vh;
      left: 0;
      top: 0;
      text-align: center;
      width: 100%;
      z-index: 99999;
      .delete-project-modal {
        max-width: 489px;
        width: 489px;
        height: 159px;
        display: flex;
        flex-direction: column;
        z-index: 999999999;
        border-radius: 10px;
        background-color: $black;
        padding: 40px;
        box-sizing: border-box;
        position: absolute;
        top: 40%;
        left: 40%;
        .delete-modal-button-container {
          display: flex;
          flex-flow: row nowrap;
          justify-content: space-between;
          .delete-button {
            background: $alert;
          }
          button {
            @include btn;
            padding: 10px 60px;
            margin-top: 3vh;
            transition: 0.1s ease-in-out;
            background: $dark-grey;
          }
        }
        p {
          text-align: center;
          font-size: 20px;
          line-height: 23px;
          letter-spacing: 0.11em;
        }
      }
    }

    @keyframes fadeIn {
      from {
        opacity: 0;
      }
      to {
        opacity: 1;
      }
    }
  }

  .left-container {
    width: 50%;
    margin: 0px 20px 0px 0px;
    .delete-project-button {
      font-style: normal;
      font-weight: 500;
      font-size: 12px;
      cursor: pointer;
      color: $dark-grey;
      letter-spacing: 0.11em;
      p {
        line-height: 24px;
        vertical-align: middle;
        display: inline;
      }
      svg {
        vertical-align: middle;
        margin-right: 6px;
      }
    }

    .page-header {
      font-weight: 500;
      font-size: 1.5rem;
      line-height: 1.5rem;
      letter-spacing: 0.11em;
      margin-bottom: 14px;
    }

    .upload-container {
      margin-top: 10px;
      display: flex;
      justify-content: center;
      flex-wrap: wrap;
      padding: 20px;
      border-radius: 10px;
      background: $field-bg;
      transition: all 0.1s ease-in-out;
      cursor: pointer;
    }
    .upload-container:hover {
      background: #33343b;
    }

    .drop-text-container {
      display: flex;
      flex-direction: column;
      align-items: center;

      .upload-icon {
        opacity: 0.2;
        margin-bottom: 10px;
      }

      .drop-text {
        margin-bottom: 10px;

        mark {
          background: none;
          color: $blue;
        }
      }
    }
  }

  .thumbnail-container {
    display: grid;
    grid-template-columns: 10% 10% 10%;
    grid-gap: 100%;
    grid-row-gap: 1%;
    margin-top: 16px;
  }

  .thumbnail {
    border: 5px solid $black;
    display: inline-flex;
    border-radius: 10px;
    height: 140px;
    box-sizing: border-box;
  }

  // .thumbnail {
  //   object-fit: cover;
  //   object-position: center;
  //   width: 100%;
  // }

  .remove {
    width: 20px;
    position: absolute;
    margin-top: -5px;
    margin-left: -5px;
    cursor: pointer;
    transition: all 0.1s ease-in-out;
    opacity: 0.8;
  }

  .remove:hover {
    transform: scale(1.2);
    opacity: 1;
  }

  .right-container {
    width: 42.5%;
    margin: 3% 0px 0px 5%;
    display: flex;
    flex-direction: column;
    overflow-y: scroll;

    form {
      label {
        display: inline-block;
        margin-top: 15px;
      }

      .project-label {
        margin-top: 0px;
      }
    }

    .alert-container {
      display: none;
    }

    form.alert {
      .alert-container {
        display: flex;
        justify-content: flex-end;
        width: 100%;
      }
      input#name {
        border: 2px solid $alert;
        border-radius: 5px;
      }
      .errorIcon {
        width: 20px;
        position: absolute;
        margin-left: 5px;
        margin-top: -5px;
        transition: all 0.1s ease-in-out;
        &:hover {
          transform: scale(1.2);
        }
      }
    }

    input {
      width: 98%;
      margin: 10px 0 20px 0;
      padding: 10px 0;
      background: $field-bg;
      border: none;
      color: white;
      outline: none;
      padding-left: 10px;
      border-radius: 5px;
      font-size: 14px;
    }

    .description {
      width: 98%;
      margin: 10px 0 20px 0;
      padding: 10px 0;
      background: $field-bg;
      border: none;
      color: white;
      outline: none;
      padding-left: 10px;
      border-radius: 5px;
      resize: vertical;
      height: 50px;
      font-size: 14px;
      font-family: 'Roboto', sans-serif;
    }
  }

  .submit-cancel-container {
    width: 100%;
    display: flex;
    flex-direction: row-reverse;
    justify-content: flex-start;
    align-items: flex-end;

    .submit-button {
      @include follow-btn;
      margin-left: 10px;
    }

    .cancel-btn {
      @include edit-profile-btn;
      background: $field-bg;
    }
  }
}

